fix: grid  scroll overflow

--- a/Index.html
+++ b/Index.html
@@ -1,133 +1,151 @@
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gatinhos</title>
 
-    <link rel="stylesheet" href="./Styles/style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gatinhos</title>
 
-    <link
-      rel="shortcut icon"
-      href="./Imagenes/Logo_Gato.ico"
-      type="image/x-icon"
-    />
-  </head>
+  <link rel="stylesheet" href="./Styles/style.css" />
 
-  <body>
-    <header>
-      <img src="./Imagenes/Logo_Gato.png" alt="Imagen del Logo" />
-      <div class="texto-encabezado">
-        <h1>Os gatinhos mais fofos de Portugal</h1>
+  <link rel="shortcut icon" href="./Imagenes/Logo_Gato.ico" type="image/x-icon" />
+</head>
+
+<body>
+  <header>
+    <img src="./Imagenes/Logo_Gato.png" alt="Imagen del Logo" />
+    <div class="texto-encabezado">
+      <h1>Os gatinhos mais fofos de Portugal</h1>
+    </div>
+  </header>
+
+  <section class="main-section">
+    <aside>
+      <button>Boton 1</button>
+      <button>Boton 2</button>
+      <button>Boton 3</button>
+      <button>Boton 4</button>
+      <button>Boton 5</button>
+      <button>Boton 6</button>
+      <button>Boton 7</button>
+      <button>Boton 8</button>
+      <button>Boton 9</button>
+      <button>Boton 10</button>
+      <button>Boton 11</button>
+      <button>Boton 12</button>
+      <button>Boton 13</button>
+      <button>Boton 14</button>
+      <button>Boton 15</button>
+      <button>Boton 16</button>
+      <button>Boton 18</button>
+      <button>Boton 19</button>
+    </aside>
+
+    <section class="imagenes-grid">
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 1</p>
+        </div>
       </div>
-    </header>
-
-    <section class="main-section">
-      <aside>
-        <button>Boton 1</button>
-        <button>Boton 2</button>
-        <button>Boton 3</button>
-        <button>Boton 4</button>
-        <button>Boton 5</button>
-        <button>Boton 6</button>
-        <button>Boton 7</button>
-        <button>Boton 8</button>
-        <button>Boton 9</button>
-        <button>Boton 10</button>
-        <button>Boton 11</button>
-        <button>Boton 12</button>
-        <button>Boton 13</button>
-        <button>Boton 14</button>
-        <button>Boton 15</button>
-        <button>Boton 16</button>
-      </aside>
-
-      <section class="imagenes-grid">
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 1</p>
-          </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 2</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 2</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 3</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 3</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 4</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 4</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 5</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 5</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 6</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 6</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 7</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 7</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 7</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 7</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 7</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 7</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 7</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 7</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 7</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 7</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 7</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 7</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 7</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 7</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 7</p>
         </div>
-        <div class="carta">
-          <div class="contenedor-imagen-texto">
-            <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
-            <p>Gatinho bonito 7</p>
-          </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 8</p>
         </div>
-      </section>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 9</p>
+        </div>
+      </div>
+      <div class="carta">
+        <div class="contenedor-imagen-texto">
+          <img src="./Imagenes/Gato1.webp" alt="imagen de gato" />
+          <p>Gatinho bonito 10</p>
+        </div>
+      </div>
     </section>
-    <footer>Derechos Reservados a MisCo@gmail.com &copy;</footer>
-  </body>
+  </section>
+  <footer>Derechos Reservados a MisCo@gmail.com &copy;</footer>
+</body>
+
 </html>
